added sites logo

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Poppins&display=swap" rel="stylesheet">
+  <link rel="icon" href="logo.svg">
 
   <link rel="stylesheet" href="style.css">
 
@@ -23,7 +24,7 @@
     <div class="hero">
 
       <div class="hero-txt">
-        <h1>Laffaa</h1>
+        <h1>Falafil</h1>
         <div>People often call me "لفعة بسبعة رؤوس" I'm here to prove them right</div>
       </div>
 
