FINALLY ADDED THE ANIMATIONS

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
               d="M420.816 100H346.316C315.939 168.83 315.733 225.953 330.816 343.5L741.816 501.5L884.316 523.5L1007.32 461V387.5C907.024 457.327 850.537 463.834 749.316 403C721.213 381.722 699.143 369.999 671.805 361.796C638.221 351.719 602.583 352.391 567.557 350.755C487.316 347.005 449.82 320.209 420.816 242C405.784 186.339 406.791 155.262 420.816 100Z"
               fill="url(#paint1_linear_36_69)" />
           </g>
-          <g id="Group 6" filter="url(#filter2_d_36_69)">
+          <g id="Group-6" filter="url(#filter2_d_36_69)">
             <line id="Line 2" x1="513" y1="100" x2="513" y2="255" stroke="#8574DB" stroke-width="2" />
             <g id="Group 5">
               <path id="Ellipse 15"
@@ -81,7 +81,7 @@
               fill="url(#paint6_linear_36_69)" />
           </g>
         </g>
-        <g id="Group 4">
+        <g id="Group-4">
           <path id="Ellipse 14"
             d="M568.847 191.168C607.044 182.103 645.848 179.811 684.19 188.243C722.533 196.674 758.478 213.649 789.349 237.902C820.22 262.156 845.22 293.062 862.487 328.319C879.755 363.577 888.844 402.276 889.077 441.534C889.311 480.791 880.683 519.596 863.837 555.056C846.99 590.516 822.359 621.718 791.779 646.337C761.199 670.956 725.458 688.357 687.219 697.244C648.98 706.132 604.303 704.089 566 695.479C584.977 694.056 630.521 673.181 651.87 656.102C684.131 635.227 702.634 617.571 721.136 589.58C738.215 567.756 751.974 530.854 757.667 502.389C762.885 487.682 764.531 456.267 764.531 442.275C764.408 421.756 760.988 391.374 754.346 371.448C748.178 352.946 736.792 320.685 725.88 305.504C694.094 258.061 664.205 234.815 629.573 215.363C614.084 206.665 592.568 197.335 568.847 191.168Z"
             fill="url(#paint7_linear_36_69)" />
@@ -234,13 +234,14 @@
     <!-- --------- -->
     <section id="featured-articles" class="featured-articles">
       <div class="container flow">
-        <h2 class="section-title text-center ">My Articles</h2>
+        <h2 class="section-title text-center ">My Blog</h2>
         <ul role="list" class="articles__list flow">
           <li>
             <article class="snippet">
               <img src="/assets/blog/article-1.jpg" alt="This is a test" class="snippet__image">
+
               <h3 class="snippet__title"><a href="/blog/my-first-article/">My First Article</a></h3>
-              <p class="snippet__meta">by <span>Kevin Powell</span> on <span>Apr 30, 2021</span></p>
+              <p class="snippet__meta">Apr 30, 2021</p>
               <p class="snippet__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusantium
                 sit illo neque rem omnis quaerat, nam similique vitae delectus ad magni vel quo maxime, magnam placeat.
                 Reprehenderit, distinctio aliquam?</p>
