someone save me ;-;

--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,7 @@
         <div>People often call me "لفعة بسبعة رؤوس" I'm here to prove them right</div>
       </div>
 
-      <svg class="hero-svg" width="1128" height="703" viewBox="0 0 1128 703" fill="none" xmlns="http://www.w3.org/2000/svg"
-        preserveAspectRatio="xMidYMid meet>
+      <svg class="hero-svg" width="1128" height="703" viewBox="0 0 1128 703" fill="none" xmlns="http://www.w3.org/2000/svg">
     <g id=" Group 7">
         <g id="Group 2">
           <g id="Group 1">
